re PR debug/38390 (Missing DW_TAG_imported_module)

gcc/cp/ChangeLog:
2008-12-07  Dodji Seketeli  <dodji@redhat.com>

        PR debug/38390
        * name-lookup.c (kept_level_p): Don't forget the case of levels
          having using directives.

gcc/testsuite/ChangeLog:
2008-12-07  Dodji Seketeli  <dodji@redhat.com>

        PR debug/38390
        * g++.dg/debug/dwarf2/imported-module-2.C: New test.

From-SVN: r142562